// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStateInfo should render with one class 1`] = `
<div
  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1kixr2c-MuiGrid-root"
  />
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render with two classes 1`] = `
<div
  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-5ly7kt-MuiGrid-root"
  >
    ALO
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1qjqtyt-MuiGrid-root"
  >
    eeeeee d.M.
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render without classes 1`] = `
<div
  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1kixr2c-MuiGrid-root"
  />
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-198xas1-MuiGrid-root"
  >
    1
  </div>
</div>
`;
